# uav-rfid-sim

./: .gitignore  MANIFEST.in  Makefile  Profile.prof  README.md  requirements.txt  setup.cfg  setup.py  simulation.ipynb
experiments/: EXPERIMENT.ipynb  profile_queues.py  run_model.py  simulation_old.ipynb
pysim/: des.py  events.py  model.py  protocol.py  radio.py  simulation.py  utils.py
src/csurm/: CMakeLists.txt  Protocol.h  Scheduler.cpp  Scheduler.h
src/model/: helpers.py  simulation.py
src/model/c1g2/: commands.py  replies.py  symbols.py
src/model/des/: Scheduler.cpp  Scheduler.h  Scheduler.pxd  cyscheduler.cpp  cyscheduler.html  cyscheduler.pyx  pyscheduler.py
src/model/handlers/: events.py  handlers.py
src/model/objects/: __init__.py  channel.py  reader.py  scene.py  tag.py
src/model/radio/: radio.py
test/: functest.py  test_channel.py
