[metadata]
name = uav-rfid-sim
version = 0.1.0
description = Simulation model for UAV collecting sensor data via UHF RFID
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Andrey Larionov
author_email = larioandr@gmail.com
url = https://github.com/larioandr/uav-rfid-sim
#download_urls = https://pypi.org/project/cython-package-example
project_urls =
	Documentation = https://github.com/larioandr/uav-rfid-sim
	Code = https://github.com/larioandr/uav-rfid-sim
	Issue tracker = https://github.com/larioandr/uav-rfid-sim/issues
classifiers =
	Development Status :: 1 - Planning
	License :: OSI Approved :: MIT License
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.8
package_dir = =src
packages = find:

[options.packages.find]
where = src

#[options.package_data]
#* = *.pxd, *.h
#model = data/*
